--- a/metrics.html
+++ b/metrics.html
@@ -9,15 +9,12 @@
 		<script type="text/javascript" src="js/metrics.js"></script>
 		<!--<script type="text/javascript" src="js/Ext.ux.PanelCollapsedTitle.js"></script>-->
 		<script type="text/javascript" src="../lib/ieCheck.js"></script>
-		<!--<link rel="stylesheet" type="text/css" href="css/custom.css" />
-		<link rel="stylesheet" type="text/css" href="css/ez.css" />
 		<link rel="stylesheet" type="text/css" href="css/olStyle.css" />
 		<link rel="stylesheet" type="text/css" href="../lib/ext-3.4.0/resources/css/ext-all.css" />
         <link rel="stylesheet" type="text/css" href="css/ext-3.4.0.css" />
 		<link rel="stylesheet" type="text/css" href="css/Ext.ux.form.CheckboxCombo.min.css" />
-		<link rel="stylesheet" type="text/css" id="xtheme-wireframe" href="../lib/ext-3.4.0/resources/css/xtheme-wireframe.css"/> 
-        <link rel="stylesheet" type="text/css" href="css/bids.css"/>-->
-		<link rel="stylesheet" type="text/css" href="css/landing.css"/>
+		<link rel="stylesheet" type="text/css" id="xtheme-wireframe" href="../lib/ext-3.4.0/resources/css/xtheme-wireframe.css"/> -->
+        <link rel="stylesheet" type="text/css" href="css/bids.css"/>
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
