--- a/faqs.html
+++ b/faqs.html
@@ -1,9 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>BIDS: Business Information Database System</title>
-        <script type="text/javascript" src="../lib/ieCheck.js"></script>
-		<link rel="stylesheet" type="text/css" href="css/custom.css" />
-		<link rel="stylesheet" type="text/css" href="css/ez.css" />
 		<link rel="stylesheet" type="text/css" href="../lib/ext-3.4.0/resources/css/ext-all.css" />
         <link rel="stylesheet" type="text/css" href="css/ext-3.4.0.css" />
 		<link rel="stylesheet" type="text/css" href="css/Ext.ux.form.CheckboxCombo.min.css" />
@@ -19,35 +16,37 @@
 			ga('send', 'pageview');
 		</script>
     </head>
-   <body class="contentBody">
-		<div class="container">
-			<header>
+	<body>
+		<div id="wrap">
+			<div id="header">
 				<div class="row">
-					<a class="logo" href=""/><img width="237" height="60" alt="BIDS Logo" src="img/bids-logo.png"></a>
+					<a class="logo" data-bind="click: showHome" href="#"/>
+						<img width="237" height="60" alt="BIDS Logo" src="img/bids-logo.png">
+					</a>
 					<ul class="nav">
 						<li>
-							<a href="index.html">Home</a>
-						</li>
-						<li>
-							<a href="resources.html">Resources</a>
-						</li>
-						<li>
-							<a href="data.html">Data</a>
-						</li>
-						<li>
-							<a href="#">FAQs</a>
+							<a href="mailto:BIDS-Mailbox@state.gov">Contact Us</a>
 						</li>
 						<li>
 							<a href="help.html">Help</a>
 						</li>
 						<li>
-							<a href="mailto:BIDS-Mailbox@state.gov">Contact Us</a>
+							<a href="#">FAQs</a>
+						</li>
+						<li>
+							<a href="data.html">Data</a>
+						</li>
+						<li>
+							<a href="resources.html">Resources</a>
+						</li>
+						<li>
+							<a href="index.html">Home</a>
 						</li>
 					</ul>
 				</div>
-			</header>
-			<div class="content">
-				<div class="row">
+			</div>
+			<div id="main">
+				<div class="mainContent">
 					<h1>
 						Frequently Asked Questions
 					</h1>
@@ -87,6 +86,9 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		<div id="footer">
+			Sponsored by: The U.S. Department of State<br>State Department has compiled this information in order to help identify opportunities for U.S. businesses.  It is not intended to be complete and interested parties should not solely rely on the information provided herein, and neither the U.S. Government not its imployees/contractors assume any legal liability for the accuracy, completeness, or  usefulness of any information or process disclosed. It is the sole responsibility of the user of the information to verify its accuracy.
 		</div>
 	</body>
 </html>
