Add a lead issues (#106)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<script type="text/javascript" src="../lib/OpenLayers/lib/OpenLayers.js"></script>
         <script type="text/javascript" src="../lib/GeoExt/script/GeoExt.js"></script>
         <script type="text/javascript" src="js/domain.js"></script>
-		<script type="text/javascript" src="js/check.js"></script>
+		<!--<script type="text/javascript" src="js/check.js"></script>-->
 		<script type="text/javascript" id="checker"></script>
 		<script type="text/javascript" src="js/bids.js"></script>
 		<script type="text/javascript" src="js/FeaturePopups.js"></script>
