--- a/faqs.html
+++ b/faqs.html
@@ -73,6 +73,19 @@
 							</p>
 						</div>
 						<h3>
+							What other resources are available?
+						</h3>
+						<div>
+							<p>
+								<a href="www.export.gov">Export.gov</a><br>
+								<a href="www.export.gov">Export.gov</a> is a complete online export assistance portal – bringing together resources from agencies across the U.S. government. It has everything from market research and trade leads to finance information from the Export-Import Bank and the Small Business Administration.
+							</p>
+							<p>
+								<a href="www.businessusa.gov">BusinessUSA</a><br>
+								<a href="www.businessusa.gov">BusinessUSA</a> is a centralized one-stop platform to access U.S. government services that helps businesses to grow and hire. BusinessUSA implements a "no wrong door" approach for small businesses and exporters by using technology to quickly connect businesses to the services and information relevant to them, regardless of where the information is located.
+							</p>
+						</div>
+						<h3>
 							Have another question?
 						</h3>
 						<div>
