--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
 			ga('send', 'pageview');
 		</script>
     </head>
-    <body style="max-width:1200px !important;">
+    <body onload="javascript:noSideNavText();" style="max-width:1200px !important;">
 	</body>
 </html>
