Adding FavIcon to pages

--- a/resources.html
+++ b/resources.html
@@ -2,6 +2,7 @@
     <head>
         <title>BIDS: Business Information Database System</title>
 		<script type="text/javascript" src="../lib/ieCheck.js"></script>
+		<link href="img/bidsIcon.png" rel="shortcut icon">
 		<link rel="stylesheet" type="text/css" href="../lib/ext-3.4.0/resources/css/ext-all.css" />
         <link rel="stylesheet" type="text/css" href="css/ext-3.4.0.css" />
 		<link rel="stylesheet" type="text/css" href="css/Ext.ux.form.CheckboxCombo.min.css" />
