--- a/data.html
+++ b/data.html
@@ -9,6 +9,7 @@
 		<script type="text/javascript" src="js/bidsGrid.js"></script>
 		<script type="text/javascript" src="js/Ext.ux.PanelCollapsedTitle.js"></script>
 		<script type="text/javascript" src="../lib/ieCheck.js"></script>
+		<link href="img/bidsIcon.png" rel="shortcut icon">
 		<link rel="stylesheet" type="text/css" href="css/olStyle.css" />
 		<link rel="stylesheet" type="text/css" href="../lib/ext-3.4.0/resources/css/ext-all.css" />
         <link rel="stylesheet" type="text/css" href="css/ext-3.4.0.css" />
