--- a/map.html
+++ b/map.html
@@ -16,6 +16,7 @@
 		<script type="text/javascript" src="js/search.js"></script>
 		<script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
 		<script type="text/javascript" src="../lib/ieCheck.js"></script>
+		<link href="img/bidsIcon.png" rel="shortcut icon">
 		<link rel="stylesheet" type="text/css" href="css/olStyle.css" />
 		<link rel="stylesheet" type="text/css" href="../lib/ext-3.4.0/resources/css/ext-all.css" />
         <link rel="stylesheet" type="text/css" href="css/ext-3.4.0.css" />
