Populating other pages with icon (#45)

--- a/faqs.html
+++ b/faqs.html
@@ -2,6 +2,7 @@
     <head>
         <title>BIDS: Business Information Database System</title>
 		<link href="img/bidsIcon.png" rel="shortcut icon">
+		<link rel="stylesheet" type="text/css" href="css/olStyle.css" />
 		<link rel="stylesheet" type="text/css" href="../lib/ext-3.4.0/resources/css/ext-all.css" />
         <link rel="stylesheet" type="text/css" href="css/ext-3.4.0.css" />
 		<link rel="stylesheet" type="text/css" href="css/Ext.ux.form.CheckboxCombo.min.css" />
@@ -20,9 +21,9 @@
 	<body>
 		<div id="wrap">
 			<div id="header">
-				<div class="row">
+				<div class="row" style="margin: 0px -12px 0px 7px;">
 					<a class="logo" data-bind="click: showHome" href="#"/>
-						<img width="237" height="60" alt="BIDS Logo" src="img/bids-logo.png">
+						<img id="bidsLogo" alt="BIDS Logo" src="img/bidsLogo.png">
 					</a>
 					<ul class="nav">
 						<li>
