--- a/resources.html
+++ b/resources.html
@@ -3,6 +3,7 @@
         <title>BIDS: Business Information Database System</title>
 		<script type="text/javascript" src="../lib/ieCheck.js"></script>
 		<link href="img/bidsIcon.png" rel="shortcut icon">
+		<link rel="stylesheet" type="text/css" href="css/olStyle.css" />
 		<link rel="stylesheet" type="text/css" href="../lib/ext-3.4.0/resources/css/ext-all.css" />
         <link rel="stylesheet" type="text/css" href="css/ext-3.4.0.css" />
 		<link rel="stylesheet" type="text/css" href="css/Ext.ux.form.CheckboxCombo.min.css" />
@@ -21,9 +22,9 @@
     <body>
 		<div id="wrap">
 			<div id="header">
-				<div class="row">
+				<div class="row" style="margin: 0px -12px 0px 7px;">
 					<a class="logo" data-bind="click: showHome" href="#"/>
-						<img width="237" height="60" alt="BIDS Logo" src="img/bids-logo.png">
+						<img id="bidsLogo" alt="BIDS Logo" src="img/bidsLogo.png">
 					</a>
 					<ul class="nav">
 						<li>
