Populating other pages with icon (#45)

--- a/faqs.html
+++ b/faqs.html
@@ -1,11 +1,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>BIDS: Business Information Database System</title>
-		<link href="img/bidsIcon.png" rel="shortcut icon">
-		<link rel="stylesheet" type="text/css" href="css/olStyle.css" />
-		<link rel="stylesheet" type="text/css" href="../lib/ext-3.4.0/resources/css/ext-all.css" />
-        <link rel="stylesheet" type="text/css" href="css/ext-3.4.0.css" />
-		<link rel="stylesheet" type="text/css" href="css/Ext.ux.form.CheckboxCombo.min.css" />
+		<link href="img/bidsIcon.png" rel="shortcut icon"/>
+		<link rel="stylesheet" type="text/css" href="css/olStyle.css"/>
+		<link rel="stylesheet" type="text/css" href="../lib/ext-3.4.0/resources/css/ext-all.css"/>
+        <link rel="stylesheet" type="text/css" href="css/ext-3.4.0.css"/>
+		<link rel="stylesheet" type="text/css" href="css/Ext.ux.form.CheckboxCombo.min.css"/>
 		<link rel="stylesheet" type="text/css" id="xtheme-wireframe" href="../lib/ext-3.4.0/resources/css/xtheme-wireframe.css"/> 
         <link rel="stylesheet" type="text/css" href="css/bids.css"/>
 		<script>
