--- a/data.html
+++ b/data.html
@@ -9,11 +9,11 @@
 		<script type="text/javascript" src="js/bidsGrid.js"></script>
 		<script type="text/javascript" src="js/Ext.ux.PanelCollapsedTitle.js"></script>
 		<script type="text/javascript" src="../lib/ieCheck.js"></script>
-		<link href="img/bidsIcon.png" rel="shortcut icon">
-		<link rel="stylesheet" type="text/css" href="css/olStyle.css" />
-		<link rel="stylesheet" type="text/css" href="../lib/ext-3.4.0/resources/css/ext-all.css" />
+		<link href="img/bidsIcon.png" rel="shortcut icon"/>
+		<link rel="stylesheet" type="text/css" href="css/olStyle.css"/>
+		<link rel="stylesheet" type="text/css" href="../lib/ext-3.4.0/resources/css/ext-all.css"/>
         <link rel="stylesheet" type="text/css" href="css/ext-3.4.0.css" />
-		<link rel="stylesheet" type="text/css" href="css/Ext.ux.form.CheckboxCombo.min.css" />
+		<link rel="stylesheet" type="text/css" href="css/Ext.ux.form.CheckboxCombo.min.css"/>
 		<link rel="stylesheet" type="text/css" id="xtheme-wireframe" href="../lib/ext-3.4.0/resources/css/xtheme-wireframe.css"/> 
         <link rel="stylesheet" type="text/css" href="css/bids.css"/>
 		<script>
