--- a/faqs.html
+++ b/faqs.html
@@ -39,6 +39,9 @@
 							<a href="data.html">Data</a>
 						</li>
 						<li>
+							<a href="map.html">Map</a>
+						</li>
+						<li>
 							<a href="index.html">Home</a>
 						</li>
 					</ul>
