--- a/help.html
+++ b/help.html
@@ -73,6 +73,9 @@
 							<a href="data.html">Data</a>
 						</li>
 						<li>
+							<a href="map.html">Map</a>
+						</li>
+						<li>
 							<a href="index.html">Home</a>
 						</li>
 					</ul>
