--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<script type="text/javascript" src="js/patches_OL-popup-autosize.js"></script>
 		<script type="text/javascript" src="js/Ext.ux.PanelCollapsedTitle.js"></script>
 		<script type="text/javascript" src="js/Ext.ux.form.CheckboxCombo.min.js"></script>
-		<script type="text/javascript" src="js/search.js"></script>
+		<script type="text/javascript" src="js/miniSearch.js"></script>
 		<script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
 		<script type="text/javascript" src="../lib/ieCheck.js"></script>
 		<script type="text/javascript" src="js/displaySideNavText.js"></script>
