CSS changes for header

--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
 			ga('send', 'pageview');
 		</script>
     </head>
-    <body style="max-width:1200px !important;">
+    <body>
 	</body>
 </html>
