--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
 		<link rel="stylesheet" type="text/css" href="css/Ext.ux.form.CheckboxCombo.min.css" />
 		<link rel="stylesheet" type="text/css" id="xtheme-wireframe" href="../lib/ext-3.4.0/resources/css/xtheme-wireframe.css"/> 
         <link rel="stylesheet" type="text/css" href="css/bids.css"/>
-		<script>
+		<style type="text/css"> 
+.x-panel-body {
+	background-color: rgba(255,255,255,0.33) !important;
+}
+
+.x-border-layout-ct {
+	background-color: rgba(255,255,255,0.33) !important;
+}
+</style>
+<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -35,6 +44,6 @@
 			ga('send', 'pageview');
 		</script>
     </head>
-    <body>
+    <body background="http://localhost/bids/img/BIDS_background.png">
 	</body>
 </html>
