--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>BIDS: Business Information Database System</title>
+    	<head>
+        	<title>BIDS: Business Information Database System</title>
 		<script type="text/javascript" src="http://extjs.cachefly.net/ext-3.4.0/adapter/ext/ext-base.js"></script>
-        <script type="text/javascript" src="http://extjs.cachefly.net/ext-3.4.0/ext-all.js"></script>
+        	<script type="text/javascript" src="http://extjs.cachefly.net/ext-3.4.0/ext-all.js"></script>
 		<script type="text/javascript" src="../lib/OpenLayers/lib/OpenLayers.js"></script>
-        <script type="text/javascript" src="../lib/GeoExt/script/GeoExt.js"></script>
-        <script type="text/javascript" src="js/domain.js"></script>
+        	<script type="text/javascript" src="../lib/GeoExt/script/GeoExt.js"></script>
+        	<script type="text/javascript" src="js/domain.js"></script>
 		<script type="text/javascript" src="js/check.js"></script>
 		<script type="text/javascript" id="checker"></script>
 		<script type="text/javascript" src="js/landing.js"></script>
@@ -21,20 +21,19 @@
 		<link href="img/bidsIcon.png" rel="shortcut icon">
 		<link rel="stylesheet" type="text/css" href="css/olStyle.css" />
 		<link rel="stylesheet" type="text/css" href="../lib/ext-3.4.0/resources/css/ext-all.css" />
-        <link rel="stylesheet" type="text/css" href="css/ext-3.4.0.css" />
+		<link rel="stylesheet" type="text/css" href="css/ext-3.4.0.css" />
 		<link rel="stylesheet" type="text/css" href="css/Ext.ux.form.CheckboxCombo.min.css" />
 		<link rel="stylesheet" type="text/css" id="xtheme-wireframe" href="../lib/ext-3.4.0/resources/css/xtheme-wireframe.css"/> 
-        <link rel="stylesheet" type="text/css" href="css/bids.css"/>
+		<link rel="stylesheet" type="text/css" href="css/bids.css"/>
 		<style type="text/css"> 
-.x-panel-body {
-	background-color: rgba(255,255,255,0.33) !important;
-}
-
-.x-border-layout-ct {
-	background-color: rgba(255,255,255,0.33) !important;
-}
-</style>
-<script>
+			.x-panel-body {
+				background-color: rgba(255,255,255,0.33) !important;
+			}
+			.x-border-layout-ct {
+				background-color: rgba(255,255,255,0.33) !important;
+			}
+		</style>
+		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -43,7 +42,7 @@
 			ga('create', 'UA-42151027-1', 'edip-maps.net');
 			ga('send', 'pageview');
 		</script>
-    </head>
-    <body background="http://localhost/bids/img/BIDS_background.png">
+    	</head>
+    	<body background="img/BIDS_background.png">
 	</body>
 </html>
