Stretching background image

--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
 			ga('send', 'pageview');
 		</script>
     	</head>
-    	<body background="img/BIDS_background.png">
+    	<body style="background-image:url(img/BIDS_background.png); width:100%; height:100%;">
 	</body>
 </html>
