Background image adjustments on landing page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
 			ga('send', 'pageview');
 		</script>
     	</head>
-    	<body style="background-image:url(img/BIDS_background.png); width:100%; background-repeat: no-repeat; padding: 122px 190px 80px 190px; margin: 0px;">
+    	<body style="background-image:url(img/BIDS_background.png);">
 	</body>
 </html>
