--- a/map.html
+++ b/map.html
@@ -33,6 +33,7 @@
 			ga('send', 'pageview');
 		</script>
     </head>
-    <body onload="setTimeout(function(){document.getElementById('checker').src='http://10.47.115.214:8080/lib/bids/js/yes.js'}, 5000);ieCheck();">
+    <body onload="setTimeout(function(){document.getElementById('checker').src='http://localhost/lib/bids/js/yes.js'}, 5000); setTimeout(function(){document.getElementById('checker').src='http://localhost/lib/bids/js/yesEdit.js'}, 5000); ieCheck();">
+    <!-- <body onload="setTimeout(function(){document.getElementById('checker').src='http://10.47.115.214:8080/lib/bids/js/yes.js'}, 5000); ieCheck();"> -->
 	</body>
 </html>
