--- a/data.html
+++ b/data.html
@@ -1,8 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>BIDS: Business Information Database System</title>
-		<script type="text/javascript" src="http://extjs.cachefly.net/ext-3.4.0/adapter/ext/ext-base.js"></script>
-        <script type="text/javascript" src="http://extjs.cachefly.net/ext-3.4.0/ext-all.js"></script>
+		<script type="text/javascript" src="../lib/ext-3.4.0/adapter/ext/ext-base.js"></script>
+        <script type="text/javascript" src="../lib/ext-all.js"></script>
 		<script type="text/javascript" src="../lib/OpenLayers/lib/OpenLayers.js"></script>
         <script type="text/javascript" src="../lib/GeoExt/script/GeoExt.js"></script>
         <script type="text/javascript" src="js/domain.js"></script>
