--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>BIDS: Business Information Database System</title>
-		<script type="text/javascript" src="http://extjs.cachefly.net/ext-3.4.0/adapter/ext/ext-base.js"></script>
-        <script type="text/javascript" src="http://extjs.cachefly.net/ext-3.4.0/ext-all.js"></script>
+		<script type="text/javascript" src="../lib/ext-3.4.0/adapter/ext/ext-base.js"></script>
+        <script type="text/javascript" src="../lib/ext-all.js"></script>
 		<script type="text/javascript" src="../lib/OpenLayers/lib/OpenLayers.js"></script>
         <script type="text/javascript" src="../lib/GeoExt/script/GeoExt.js"></script>
         <script type="text/javascript" src="js/domain.js"></script>
@@ -17,7 +17,7 @@
 		<script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
 		<script type="text/javascript" src="../lib/ieCheck.js"></script>
 		<script type="text/javascript" src="js/displaySideNavText.js"></script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/1.4.5/numeral.min.js"></script>
+		<script src="../lib/Numeral-js/min/numeral.min.js"></script>
 		<link href="img/bidsIcon.png" rel="shortcut icon">
 		<link rel="stylesheet" type="text/css" href="css/olStyle.css" />
 		<link rel="stylesheet" type="text/css" href="../lib/ext-3.4.0/resources/css/ext-all.css" />
