fixing a relative link to ext-all.js
* plus some random indenting

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
     <head>
         <title>BIDS: Business Information Database System</title>
 		<script type="text/javascript" src="../lib/ext-3.4.0/adapter/ext/ext-base.js"></script>
-        <script type="text/javascript" src="../lib/ext-all.js"></script>
+        	<script type="text/javascript" src="../lib/ext-3.4.0/ext-all.js"></script>
 		<script type="text/javascript" src="../lib/OpenLayers/lib/OpenLayers.js"></script>
-        <script type="text/javascript" src="../lib/GeoExt/script/GeoExt.js"></script>
-        <script type="text/javascript" src="js/domain.js"></script>
+        	<script type="text/javascript" src="../lib/GeoExt/script/GeoExt.js"></script>
+        	<script type="text/javascript" src="js/domain.js"></script>
 		<script type="text/javascript" src="js/check.js"></script>
 		<script type="text/javascript" id="checker"></script>
 		<script type="text/javascript" src="js/landing.js"></script>
@@ -21,10 +21,10 @@
 		<link href="img/bidsIcon.png" rel="shortcut icon">
 		<link rel="stylesheet" type="text/css" href="css/olStyle.css" />
 		<link rel="stylesheet" type="text/css" href="../lib/ext-3.4.0/resources/css/ext-all.css" />
-        <link rel="stylesheet" type="text/css" href="css/ext-3.4.0.css" />
+        	<link rel="stylesheet" type="text/css" href="css/ext-3.4.0.css" />
 		<link rel="stylesheet" type="text/css" href="css/Ext.ux.form.CheckboxCombo.min.css" />
 		<link rel="stylesheet" type="text/css" id="xtheme-wireframe" href="../lib/ext-3.4.0/resources/css/xtheme-wireframe.css"/> 
-        <link rel="stylesheet" type="text/css" href="css/bids.css"/>
+        	<link rel="stylesheet" type="text/css" href="css/bids.css"/>
 		<style type="text/css"> 
 .x-panel-body {
 	background-color: rgba(255,255,255,0.33) !important;
