--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>BIDS: Business Information Database System</title>
-	<script type="text/javascript" src="/lib/ext-3.4.0/adapter/ext/ext-base.js"></script>
-        <script type="text/javascript" src="/lib/ext-3.4.0/ext-all.js"></script>
-	<script type="text/javascript" src="/lib/OpenLayers/lib/OpenLayers.js"></script>
-        <script type="text/javascript" src="/lib/GeoExt/script/GeoExt.js"></script>
-        <script type="text/javascript" src="/js/domain.js"></script>
-	<script type="text/javascript" src="/js/check.js"></script>
+	<script type="text/javascript" src="lib/ext-3.4.0/adapter/ext/ext-base.js"></script>
+        <script type="text/javascript" src="lib/ext-3.4.0/ext-all.js"></script>
+	<script type="text/javascript" src="lib/OpenLayers/lib/OpenLayers.js"></script>
+        <script type="text/javascript" src="lib/GeoExt/script/GeoExt.js"></script>
+        <script type="text/javascript" src="js/domain.js"></script>
+	<script type="text/javascript" src="js/check.js"></script>
 	<script type="text/javascript" id="checker"></script>
-	<script type="text/javascript" src="/js/landing.js"></script>
-	<script type="text/javascript" src="/js/FeaturePopups.js"></script>
-	<script type="text/javascript" src="/js/patches_OL-popup-autosize.js"></script>
-	<script type="text/javascript" src="/js/Ext.ux.PanelCollapsedTitle.js"></script>
-	<script type="text/javascript" src="/js/Ext.ux.form.CheckboxCombo.min.js"></script>
-	<script type="text/javascript" src="/js/miniSearch.js"></script>
+	<script type="text/javascript" src="js/landing.js"></script>
+	<script type="text/javascript" src="js/FeaturePopups.js"></script>
+	<script type="text/javascript" src="js/patches_OL-popup-autosize.js"></script>
+	<script type="text/javascript" src="js/Ext.ux.PanelCollapsedTitle.js"></script>
+	<script type="text/javascript" src="js/Ext.ux.form.CheckboxCombo.min.js"></script>
+	<script type="text/javascript" src="js/miniSearch.js"></script>
 	<script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
-	<script type="text/javascript" src="/lib/ieCheck.js"></script>
-	<script type="text/javascript" src="/js/displaySideNavText.js"></script>
-	<script src="/lib/Numeral-js/min/numeral.min.js"></script>
-	<link href="/img/bidsIcon.png" rel="shortcut icon">
-	<link rel="stylesheet" type="text/css" href="/css/olStyle.css" />
-	<link rel="stylesheet" type="text/css" href="/lib/ext-3.4.0/resources/css/ext-all.css" />
-        <link rel="stylesheet" type="text/css" href="/css/ext-3.4.0.css" />
-	<link rel="stylesheet" type="text/css" href="/css/Ext.ux.form.CheckboxCombo.min.css" />
-	<link rel="stylesheet" type="text/css" id="xtheme-wireframe" href="/lib/ext-3.4.0/resources/css/xtheme-wireframe.css"/> 
-        <link rel="stylesheet" type="text/css" href="/css/bids.css"/>
+	<script type="text/javascript" src="lib/ieCheck.js"></script>
+	<script type="text/javascript" src="js/displaySideNavText.js"></script>
+	<script src="lib/Numeral-js/min/numeral.min.js"></script>
+	<link href="img/bidsIcon.png" rel="shortcut icon">
+	<link rel="stylesheet" type="text/css" href="css/olStyle.css" />
+	<link rel="stylesheet" type="text/css" href="lib/ext-3.4.0/resources/css/ext-all.css" />
+        <link rel="stylesheet" type="text/css" href="css/ext-3.4.0.css" />
+	<link rel="stylesheet" type="text/css" href="css/Ext.ux.form.CheckboxCombo.min.css" />
+	<link rel="stylesheet" type="text/css" id="xtheme-wireframe" href="lib/ext-3.4.0/resources/css/xtheme-wireframe.css"/> 
+        <link rel="stylesheet" type="text/css" href="css/bids.css"/>
 		<style type="text/css"> 
 			.x-panel-body {
 				background-color: rgba(255,255,255,0.33) !important;
