Adding logo alt Text

--- a/faqs.html
+++ b/faqs.html
@@ -22,8 +22,8 @@
 		<div id="wrap">
 			<div id="header">
 				<div class="row" style="margin: 0px 0px 0px -100px;">
-					<a class="logo" data-bind="click: showHome" href="#"/>
-						<img id="bidsLogo" alt="BIDS Logo" src="img/bidsLogo.png">
+					<a class="logo" data-bind="click: showHome" href="#">
+						<img id="bidsLogo" alt="BIDS: Business Information Database System, United States Department of State" src="img/bidsLogo.png">
 					</a>
 					<ul class="nav">
 						<li>
