Detect host automatically
May be useful to replace domain.js by automating the detection.

--- a/data.html
+++ b/data.html
@@ -5,7 +5,7 @@
         <script type="text/javascript" src="../lib/ext-3.4.0/ext-all.js"></script>
 		<script type="text/javascript" src="../lib/OpenLayers/lib/OpenLayers.js"></script>
         <script type="text/javascript" src="../lib/GeoExt/script/GeoExt.js"></script>
-        <script type="text/javascript" src="js/domain.js"></script>
+        <script type="text/javascript" src="js/host.js"></script>
 		<script type="text/javascript" src="js/bidsGrid.js"></script>
 		<script type="text/javascript" src="js/Ext.ux.PanelCollapsedTitle.js"></script>
 		<script type="text/javascript" src="../lib/ieCheck.js"></script>
