--- a/map.html
+++ b/map.html
@@ -5,7 +5,7 @@
         <script type="text/javascript" src="../lib/ext-3.4.0/ext-all.js"></script>
 		<script type="text/javascript" src="../lib/OpenLayers/lib/OpenLayers.js"></script>
         <script type="text/javascript" src="../lib/GeoExt/script/GeoExt.js"></script>
-        <script type="text/javascript" src="js/domain.js"></script>
+        <script type="text/javascript" src="js/host.js"></script>
 		<script type="text/javascript" src="js/check.js"></script>
 		<script type="text/javascript" id="checker"></script>
 		<script type="text/javascript" src="js/map.js"></script>
