Fixes #129 and Fixes #149

--- a/help.html
+++ b/help.html
@@ -219,6 +219,8 @@
 							<p>Indicate what government ministry or other entity will be responsible for issuing the project documents an overseeing the project.</p>
 							<h4>Project Website</h4>
 							<p>If there is a website link to more information about the project, enter the web address here.</p>
+							<h4>Embassy Website</h4>
+							<p>If there is a website link to the Post's Business Tab, enter the web address here.</p>
 							<h4>Submitting Officer</h4>
 							<p>Please enter the name of the officer submitting the lead, or the name of the person at post who would be the most appropriate point of contact for follow-up questions from Washington or the private sector.</p>
 							<h4>Submitting Officer Contact</h4>
