Fixed #158, fixes #159, fixes #160

--- a/faqs.html
+++ b/faqs.html
@@ -49,50 +49,48 @@
 			</div>
 			<div id="main">
 				<div class="mainContent">
-					<h1>
+					<h3>
 						Frequently Asked Questions
-					</h1>
+					</h3>
 					<div >
-						<h3>
+						<h4>
 							Where does the data come from?
-						</h3>
+						</h4>
 						<div>
 							<p>
 								The data comes from vendors that license the data, U.S. government sources, government sources from the countries included in the map, and from the companies themselves. The data is vetted by the vendors and the government ministries.&nbsp;
 							</p>
 						</div>
-						<h3>
+						<h4>
 							How often is the data updated?
-						</h3>
+						</h4>
 						<div>
 							<p>
 								We get quarterly updates from the vendors who license us the data. Data received from government sources and companies is updated when those authenticated users enter it.
 							</p>
 						</div>
-						<h3>
+						<h4>
 							How accurate is the data?
-						</h3>
+						</h4>
 						<div>
 							<p>
 								The data is licensed from vendors whose job it is to ensure accuracy. However this data will change all the time; particularly "jobs created." While we have done everything possible to ensure accuracy, the data is not guaranteed to be 100% accurate.
 							</p>
 						</div>
-						<h3>
+						<h4>
 							What other resources are available?
-						</h3>
+						</h4>
 						<div>
 							<p>
-								<a href="www.export.gov">Export.gov</a><br>
-								<a href="www.export.gov">Export.gov</a> is a complete online export assistance portal – bringing together resources from agencies across the U.S. government. It has everything from market research and trade leads to finance information from the Export-Import Bank and the Small Business Administration.
+								<b><a href="www.export.gov">Export.gov</a></b> is a complete online export assistance portal - bringing together resources from agencies across the U.S. government. It has everything from market research and trade leads to finance information from the Export-Import Bank and the Small Business Administration.
 							</p>
 							<p>
-								<a href="www.businessusa.gov">BusinessUSA</a><br>
-								<a href="www.businessusa.gov">BusinessUSA</a> is a centralized one-stop platform to access U.S. government services that helps businesses to grow and hire. BusinessUSA implements a "no wrong door" approach for small businesses and exporters by using technology to quickly connect businesses to the services and information relevant to them, regardless of where the information is located.
+								<b><a href="www.businessusa.gov">BusinessUSA</a></b> is a centralized one-stop platform to access U.S. government services that helps businesses to grow and hire. BusinessUSA implements a "no wrong door" approach for small businesses and exporters by using technology to quickly connect businesses to the services and information relevant to them, regardless of where the information is located.
 							</p>
 						</div>
-						<h3>
+						<h4>
 							Have another question?
-						</h3>
+						</h4>
 						<div>
 							<p>
 								<a href="mailto:BIDS-Mailbox@state.gov">Ask us !</a>
