Fixed email link (fixes #186)

--- a/help.html
+++ b/help.html
@@ -162,7 +162,7 @@
 						<h3 id="questions">QUESTIONS ABOUT BIDS?</h3>
 						<h4>What if I have a problem or a comment about BIDS?</h4>
 						<p>
-							Questions or comments about BIDS can be emailed to <a href="BIDS-Mailbox@state.gov">our support team</a>; to report specific technical problems with BIDS, click on "Report a Bug" at the bottom of the BIDS map.  Also check the FAQs on the website.
+							Questions or comments about BIDS can be emailed to <a href="mailto:BIDS-Mailbox@state.gov">our support team</a>; to report specific technical problems with BIDS, click on "Report a Bug" at the bottom of the BIDS map.  Also check the FAQs on the website.
 						</p>
 						<h4>Who reviews entries into BIDS?</h4>
 						<p>
