Restructured HREFs (Fixed #194)

--- a/faqs.html
+++ b/faqs.html
@@ -82,10 +82,10 @@
 						</h4>
 						<div>
 							<p>
-								<b><a href="www.export.gov">Export.gov</a></b> is a complete online export assistance portal - bringing together resources from agencies across the U.S. government. It has everything from market research and trade leads to finance information from the Export-Import Bank and the Small Business Administration.
+								<b><a href='http://www.export.gov' target='_blank'>Export.gov</a></b> is a complete online export assistance portal - bringing together resources from agencies across the U.S. government. It has everything from market research and trade leads to finance information from the Export-Import Bank and the Small Business Administration.
 							</p>
 							<p>
-								<b><a href="www.businessusa.gov">BusinessUSA</a></b> is a centralized one-stop platform to access U.S. government services that helps businesses to grow and hire. BusinessUSA implements a "no wrong door" approach for small businesses and exporters by using technology to quickly connect businesses to the services and information relevant to them, regardless of where the information is located.
+								<b><a href='http://www.businessusa.gov' target='_blank'>BusinessUSA</a></b> is a centralized one-stop platform to access U.S. government services that helps businesses to grow and hire. BusinessUSA implements a "no wrong door" approach for small businesses and exporters by using technology to quickly connect businesses to the services and information relevant to them, regardless of where the information is located.
 							</p>
 						</div>
 						<h4>
