URL updated to http://bids.state.gov (Fixes #195)

--- a/help.html
+++ b/help.html
@@ -107,7 +107,7 @@
 						<h3 id="how-it-works">HOW DOES BIDS WORK?</h3>
 						<h4>Where do I find BIDS?</h4>
 						<p>
-							The <a href="http://edip-maps.net/bids/">BIDS Website</a> works in all modern browsers (Internet Explorer < 8 not supported).  For those on the State Department Intranet, BIDS will also be available through the "Econ@State" Portal (econ.state.gov).
+							The <a href="http://bids.state.gov/">BIDS Website</a> works in all modern browsers (Internet Explorer < 8 not supported).  For those on the State Department Intranet, BIDS will also be available through the "Econ@State" Portal (econ.state.gov).
 						</p>
 						<h4>What does BIDS look like?</h4>
 						<img src="img/help.jpg" alt="BIDS page screen shot with explanatory text boxes near each key element" height=450 width=700>
