--- a/map.html
+++ b/map.html
@@ -16,6 +16,8 @@
 		<script type="text/javascript" src="js/search.js"></script>
 		<script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
 		<script type="text/javascript" src="../lib/ieCheck.js"></script>
+		<!--<script src="lib/Numeral-js/min/numeral.min.js"></script>
+		<script type="text/javascript" src="js/ThousandSeparatorNumberField.js"></script>-->
 		<link href="img/bidsIcon.png" rel="shortcut icon">
 		<link rel="stylesheet" type="text/css" href="css/olStyle.css" />
 		<link rel="stylesheet" type="text/css" href="../lib/ext-3.4.0/resources/css/ext-all.css" />
@@ -29,7 +31,7 @@
 			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-			ga('create', 'UA-42151027-1', 'edip-maps.net');
+			ga('create', gaID, gaSite);
 			ga('send', 'pageview');
 		</script>
     </head>
