--- a/map.html
+++ b/map.html
@@ -35,6 +35,6 @@
 			ga('send', 'pageview');
 		</script>
     </head>
-	<body onload="setTimeout(function(){document.getElementById('checker').src='http://' + host + '/lib/bids/js/yes.js'}, 5000); ieCheck();">
+	<body onload="setTimeout(function(){document.getElementById('checker').src='http://' + formSite + '/lib/bids/js/yes.js'}, 5000); ieCheck();">
 	</body>
 </html>
