Removing invalid characters

--- a/help.html
+++ b/help.html
@@ -143,7 +143,7 @@
 							<b>Map</b> will bring you back to the Map from any other page on the site you may be visiting.<br>
 							<b>Add A Lead</b> appears in both the menu bar and at the bottom of the Search/Filter panel.  Currently <u>this function is only available when accessing BIDS from a computer connected to the Department of State internal network</u>.  Add A Lead opens a new window where you may add a new trade lead (see "<b>Adding A Trade Lead</b>" below).<br>
 							<b>Data</b> will take you to a page where you may preview and download the full BIDS dataset as a 'Comma Separated Values' (.CSV) file to use in Microsoft Excel or another program.  In the Data view, you may sort data by each data field (Country, Status, Sector).<br>
-							<b>FAQs</b> opens a list of Frequently Asked Questions, and also allows you to submit a question about BIDS.  A list of government and non-government resources that relate to infrastructure development and business support can also be found here – these are primarily links to websites such as those of the multilateral development banks or U.S. government agencies.<br>
+							<b>FAQs</b> opens a list of Frequently Asked Questions, and also allows you to submit a question about BIDS.  A list of government and non-government resources that relate to infrastructure development and business support can also be found here - these are primarily links to websites such as those of the multilateral development banks or U.S. government agencies.<br>
 							<b>Help</b> will lead you to this Standard Operating Procedures document.<br>
 							<b>Contact Us</b> click here and your default mailbox program will create an e-mail to the BIDS developers for your questions or comments.<br>
 						</p>
@@ -229,9 +229,9 @@
 							<h4>Project Number</h4>
 							<p>Many projects have some type of identifying number.  Please indicate the reference number from the government, bank, etc., associated with the project.  If there are two separate funding sources and therefore two different project numbers, please indicate them here.</p>
 							<h4>Primary Funding Source</h4>
-							<p>Choose from one of <u>Development Banks</u> (i.e. a multilateral development bank such as the World Bank or the Asian Development Bank); <u>Government</u> (at any level – national, provincial, local); <u>Private</u> (this will be rare); <u>Self Financed</u> (for example, a State-Owned Enterprise funding a new power station from its own resources); or <u>Other</u>.  Additional details of the primary funding source, and any other funding sources, may be entered in the "Post Comments" box. </p>
+							<p>Choose from one of <u>Development Banks</u> (i.e. a multilateral development bank such as the World Bank or the Asian Development Bank); <u>Government</u> (at any level - national, provincial, local); <u>Private</u> (this will be rare); <u>Self Financed</u> (for example, a State-Owned Enterprise funding a new power station from its own resources); or <u>Other</u>.  Additional details of the primary funding source, and any other funding sources, may be entered in the "Post Comments" box. </p>
 							<h4>Information Source</h4>
-							<p>Select from the drop down list.  If you are entering a project at an overseas post, select "Post Identified Project."  Projects added to BIDS from MDB sites will be identified with the sponsoring bank.  Offices in Washington can also enter projects and would select "Washington Identified Project.” </p>
+							<p>Select from the drop down list.  If you are entering a project at an overseas post, select "Post Identified Project."  Projects added to BIDS from MDB sites will be identified with the sponsoring bank.  Offices in Washington can also enter projects and would select "Washington Identified Project." </p>
 							<h4>Project Description and Bidding Requirements</h4>
 							<p>Include key details of the project description that will help BIDS users understand the project more fully.  Include any special or specific bidding requirements that the government may have as well as bid deadline, if one has been established.  </p>
 							<h4>Keywords</h4>
@@ -261,7 +261,7 @@
 							The 'Reset' button will clear any information you've entered including any drop-down box selections.
 						</p>
 						<p>
-							Once you have entered all the required data and checked to be sure it’s all correct, click on “Save” at the bottom of the pop up window.  The "Save" button will be grayed out if any required information is missing.  When you click save, a pop-up box will confirm that your data has been put in queue for final review and posting to the BIDS website (see <b>The BIDS Clearance and Review Process</b>).  You will also receive an e-mail with the details of your entry; this confirms the entry is ready for final clearance and posting.
+							Once you have entered all the required data and checked to be sure it's all correct, click on "Save" at the bottom of the pop up window.  The "Save" button will be grayed out if any required information is missing.  When you click save, a pop-up box will confirm that your data has been put in queue for final review and posting to the BIDS website (see <b>The BIDS Clearance and Review Process</b>).  You will also receive an e-mail with the details of your entry; this confirms the entry is ready for final clearance and posting.
 						</p>
 						<h4>Editing a Trade Lead</h4>
 						<p>
