Updating SOP/Help (#201)
Through "Editing a Trade Lead"

--- a/help.html
+++ b/help.html
@@ -265,10 +265,35 @@
 						</p>
 						<h4>Editing a Trade Lead</h4>
 						<p>
-							<u>THIS SECTION IS UNDER DEVELOPMENT</u>
+							In some cases, a post may learn additional details about a project after the project has been entered into BIDS.  This may be about a project the post entered locally, or about a project funded by a multilateral development bank.  Some changes may be straightforward, such as changes in the project scope, bidding deadlines, or new bidding requirements.  Maybe you need to update the point of contact at post.  Or perhaps an official of the implementing agency told the post’s commercial counselor that the country is particularly interested in U.S. bidders on the project.  Any and all of this information may be of great use to U.S. firms in deciding whether to pursue a particular project.
 						</p>
 						<p>
-							BIDS entries that are not edited or updated within 90 days of being entered into BIDS will be automatically archived.
+							Editing BIDS data is what keeps it fresh, up-to-date, and of utility to U.S. business.  To keep data fresh, BIDS will automatically archive any entries that have not been updated in the previous 90 days (or that have reached the Expected Tender Date).  BIDS will generate an-email to post ten days before the archive date.  If the tender is still active, updating the information about the trade lead will reset the 90 day clock.  If post does nothing, then the lead is automatically archived.  Post may also archive a project if it learns information (such as cancellation of a project or the award of a tender) using the 'Edit a Lead.'  Archived leads are removed from the public BIDS system of active projects, but they do remain permanently in the BIDS database.
+						</p>
+						<p>
+							Edit a lead can also be used to copy data on two or more similar but distinct projects.  Once the first project has been entered into BIDS, post can use "Edit a Lead" to open the entry and edit it to reflect details of the second project.  Then click "Save as New Lead" at the bottom of the editing window.
+						</p>
+						<p>
+							Most edits are minor – revisions to dates, correcting a website address, etc., and can be made immediately.  Substantive edits to the <u>Project Description</u> and/or <u>Post Comments</u>, however, are considered major edits, and do require Washington clearance.  <em>[N.B.: we will monitor the edits made with an eye to eliminating this review requirement.]</em>
+						</p>
+						<p>
+							Whenever a lead is edited, BIDS will generate an e-mail to the Post POC as listed in the trade lead notifying him or her of the edit. 
+						</p>
+						<p>
+							<b>To edit a trade lead:</b>
+						</p>
+							<li>Select the country, sector and/or any other fields in the Search/Filter panel to find the lead you wish to edit.</li>
+							<li>At the bottom of the BIDS screen, click on the Business Leads Bar; the Bar will scroll up to display all the leads matching your selected criteria.</li>
+							<li>Click on the lead you wish to edit (the lead will be highlighted).</li>
+							<li>Click on the “Edit Entry” icon at the top left of the Business Leads Bar.</li>
+							<li>The “Add A Lead” window will open containing all the data for that specific lead.</li>
+							<li>You can now edit the data by correcting or updating information, or by adding new information.  <b>If any required data is missing, that data must be entered before you can save any edits.</b></li>
+							<li>If you have made substantive edits (i.e. beyond correcting spelling errors, etc.) to the <u>Project Description</u> or to the <u>Post Comments</u>, click on the check box indicating “This is a major edit”.</li>
+							<li>To archive the lead, click the "Archive this Lead" box.</li>
+							<li>If you've edited the lead to copy details from a similar but distinct project, click on "Save as New Lead".</li>
+							<li>Click on the "Save Edits" button to save your edits.</li>
+						<p>
+							If you click on the “Cancel” Button in the edit window, any changes you made to the data will be discarded and the window will close.
 						</p>
 						<h4>Search and Filter Functions</h4>
 						<p>
