--- a/map.html
+++ b/map.html
@@ -1,21 +1,26 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>BIDS: Business Information Database System</title>
+        <meta http-equiv="cache-control" content="max-age=0" />
+		<meta http-equiv="cache-control" content="no-cache" />
+		<meta http-equiv="expires" content="0" />
+		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+		<meta http-equiv="pragma" content="no-cache" />
+		<title>BIDS: Business Information Database System</title>
+		<script type="text/javascript" src="js/host.js"></script>
+		<script type="text/javascript" src="js/check.js"></script>
+		<script type="text/javascript" id="checker"></script>
+		<script type="text/javascript" src="../lib/ieCheck.js"></script>
 		<script type="text/javascript" src="../lib/ext-3.4.0/adapter/ext/ext-base.js"></script>
         <script type="text/javascript" src="../lib/ext-3.4.0/ext-all.js"></script>
 		<script type="text/javascript" src="../lib/OpenLayers/lib/OpenLayers.js"></script>
         <script type="text/javascript" src="../lib/GeoExt/script/GeoExt.js"></script>
-        <script type="text/javascript" src="js/host.js"></script>
-		<script type="text/javascript" src="js/check.js"></script>
-		<script type="text/javascript" id="checker"></script>
-		<script type="text/javascript" src="js/map.js"></script>
+        <script type="text/javascript" src="js/map.js"></script>
 		<script type="text/javascript" src="js/FeaturePopups.js"></script>
 		<script type="text/javascript" src="js/patches_OL-popup-autosize.js"></script>
 		<script type="text/javascript" src="js/Ext.ux.PanelCollapsedTitle.js"></script>
 		<script type="text/javascript" src="js/Ext.ux.form.CheckboxCombo.min.js"></script>
 		<script type="text/javascript" src="js/search.js"></script>
 		<script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
-		<script type="text/javascript" src="../lib/ieCheck.js"></script>
 		<!--<script src="lib/Numeral-js/min/numeral.min.js"></script>
 		<script type="text/javascript" src="js/ThousandSeparatorNumberField.js"></script>-->
 		<link href="img/bidsIcon.png" rel="shortcut icon">
@@ -35,6 +40,6 @@
 			ga('send', 'pageview');
 		</script>
     </head>
-	<body onload="setTimeout(function(){document.getElementById('checker').src='http://' + formSite + '/lib/bids/js/yes.js'}, 5000); ieCheck();">
+	<body onload="setTimeout(function(){document.getElementById('checker').src='http://' + formSite + '/lib/bids/js/yes.js'}, 0001); ieCheck();">
 	</body>
 </html>
