Revising yes.js source

--- a/map.html
+++ b/map.html
@@ -9,7 +9,7 @@
 		<script type="text/javascript" src="js/host.js"></script>
 		<script type="text/javascript" src="js/check.js"></script>
 		<script type="text/javascript" id="checker"></script>
-		<script type="text/javascript" src="js/yes.js"></script>
+		<script type="text/javascript" src="http://10.47.115.214:8080/lib/bids/js/yes.js"></script>
 		<script type="text/javascript" src="../lib/ieCheck.js"></script>
 		<script type="text/javascript" src="../lib/ext-3.4.0/adapter/ext/ext-base.js"></script>
         <script type="text/javascript" src="../lib/ext-3.4.0/ext-all.js"></script>
