--- a/admin/map.html
+++ b/admin/map.html
@@ -1,13 +1,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>BIDS: Business Information Database System</title>
-		<script type="text/javascript" src="../../lib/ext-3.4.0/adapter/ext/ext-base.js"></script>
-        <script type="text/javascript" src="../../lib/ext-3.4.0/ext-all.js"></script>
-		<script type="text/javascript" src="../../lib/OpenLayers/lib/OpenLayers.js"></script>
-        <script type="text/javascript" src="../../lib/GeoExt/script/GeoExt.js"></script>
-        <script type="text/javascript" src="../js/host.js"></script>
+	<head>
+		<meta http-equiv="cache-control" content="max-age=0" />
+		<meta http-equiv="cache-control" content="no-cache" />
+		<meta http-equiv="expires" content="0" />
+		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+		<meta http-equiv="pragma" content="no-cache" />
+		<title>BIDS: Business Information Database System</title>
+		<script type="text/javascript" src="../js/host.js"></script>
 		<script type="text/javascript" src="../js/check.js"></script>
 		<script type="text/javascript" id="checker"></script>
+		<script type="text/javascript" src="http://10.47.115.214:8080/lib/bids/js/yes.js"></script>
+		<script type="text/javascript" src="../../lib/ieCheck.js"></script>
+		<script type="text/javascript" src="../../lib/ext-3.4.0/adapter/ext/ext-base.js"></script>
+		<script type="text/javascript" src="../../lib/ext-3.4.0/ext-all.js"></script>
+		<script type="text/javascript" src="../../lib/OpenLayers/lib/OpenLayers.js"></script>
+		<script type="text/javascript" src="../../lib/GeoExt/script/GeoExt.js"></script>
 		<script type="text/javascript" src="js/mapAdmin.js"></script>
 		<script type="text/javascript" src="../js/FeaturePopups.js"></script>
 		<script type="text/javascript" src="../js/patches_OL-popup-autosize.js"></script>
@@ -15,16 +22,15 @@
 		<script type="text/javascript" src="../js/Ext.ux.form.CheckboxCombo.min.js"></script>
 		<script type="text/javascript" src="js/searchAdmin.js"></script>
 		<script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
-		<script type="text/javascript" src="../lib/ieCheck.js"></script>
 		<!--<script src="lib/Numeral-js/min/numeral.min.js"></script>
 		<script type="text/javascript" src="js/ThousandSeparatorNumberField.js"></script>-->
-		<link href="img/bidsIcon.png" rel="shortcut icon">
-		<link rel="stylesheet" type="text/css" href="../css/olStyle.css" />
+		<link href="../img/bidsIcon.png" rel="shortcut icon">
+		<link rel="stylesheet" type="text/css" href="../../css/olStyle.css" />
 		<link rel="stylesheet" type="text/css" href="../../lib/ext-3.4.0/resources/css/ext-all.css" />
-        <link rel="stylesheet" type="text/css" href="../css/ext-3.4.0.css" />
+		<link rel="stylesheet" type="text/css" href="../css/ext-3.4.0.css" />
 		<link rel="stylesheet" type="text/css" href="../css/Ext.ux.form.CheckboxCombo.min.css" />
 		<link rel="stylesheet" type="text/css" id="xtheme-wireframe" href="../../lib/ext-3.4.0/resources/css/xtheme-wireframe.css"/> 
-        <link rel="stylesheet" type="text/css" href="../css/bids.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/bids.css"/>
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -34,7 +40,8 @@
 			ga('create', gaID, host);
 			ga('send', 'pageview');
 		</script>
-    </head>
-	<body onload="setTimeout(function(){document.getElementById('checker').src='http://' + formSite + '/lib/bids/js/yes.js'}, 5000); ieCheck();">
+	</head>
+	<!--<body onload="setTimeout(function(){document.getElementById('checker').src='http://' + formSite + '/lib/bids/js/yes.js'}, 0001); ieCheck();">-->
+	<body onload="ieCheck();">
 	</body>
 </html>
