--- a/map.html
+++ b/map.html
@@ -13,8 +13,7 @@
 		<script type="text/javascript" src="../lib/ext-3.4.0/ext-all.js"></script>
 		<script type="text/javascript" src="../lib/OpenLayers/lib/OpenLayers.js"></script>
 		<script type="text/javascript" src="../lib/GeoExt/script/GeoExt.js"></script>
-		<!-- yes.js calls on ExtJS, so ExtJS must load first -->
-		<script type="text/javascript" src="http://10.47.115.214:8080/lib/bids/js/yes.js"></script>
+		<script type="text/javascript" src="/lib/modernizr.custom.92419.js"></script>
 		<!--<script type="text/javascript" src="http://localhost/bids/js/yes.js"></script>-->
 		<script type="text/javascript" src="../lib/ieCheck.js"></script>
 		<script type="text/javascript" src="js/map.js"></script>
@@ -42,8 +41,16 @@
 			ga('create', gaID, host);
 			ga('send', 'pageview');
 		</script>
+		<script>
+			var Load = function(){
+				Modernizr.load([
+  				{
+    					load: 'http://10.47.115.214:8080/lib/bids/js/yes.js'
+    				}]);
+			}
+		</script>
 	</head>
 	<!--<body onload="setTimeout(function(){document.getElementById('checker').src='http://' + formSite + '/lib/bids/js/yes.js'}, 0001); ieCheck();">-->
-	<body onload="ieCheck();">
+	<body onload="ieCheck();Load();">
 	</body>
 </html>
