--- a/map.html
+++ b/map.html
@@ -9,13 +9,14 @@
 		<script type="text/javascript" src="js/host.js"></script>
 		<script type="text/javascript" src="js/check.js"></script>
 		<script type="text/javascript" id="checker"></script>
-		<script type="text/javascript" src="../lib/ext-3.4.0/adapter/ext/ext-base.js"></script>
-		<script type="text/javascript" src="../lib/ext-3.4.0/ext-all.js"></script>
-		<script type="text/javascript" src="../lib/OpenLayers/lib/OpenLayers.js"></script>
-		<script type="text/javascript" src="../lib/GeoExt/script/GeoExt.js"></script>
-		<script type="text/javascript" src="/lib/modernizr.custom.92419.js"></script>
+		<script type="text/javascript" src="lib/ext-3.4.0/adapter/ext/ext-base.js"></script>
+		<script type="text/javascript" src="lib/ext-3.4.0/ext-all.js"></script>
+		<script type="text/javascript" src="lib/OpenLayers/lib/OpenLayers.js"></script>
+		<script type="text/javascript" src="lib/GeoExt/script/GeoExt.js"></script>
+		<script type="text/javascript" src="lib/modernizr.custom.92419.js"></script>
 		<!--<script type="text/javascript" src="http://localhost/bids/js/yes.js"></script>-->
-		<script type="text/javascript" src="../lib/ieCheck.js"></script>
+		<script type="text/javascript" src="lib/ieCheck.js"></script>
+		<script type="text/javascript" src="js/bureaus.js"></script>
 		<script type="text/javascript" src="js/map.js"></script>
 		<script type="text/javascript" src="js/FeaturePopups.js"></script>
 		<script type="text/javascript" src="js/patches_OL-popup-autosize.js"></script>
@@ -27,10 +28,10 @@
 		<script type="text/javascript" src="js/ThousandSeparatorNumberField.js"></script>-->
 		<link href="img/bidsIcon.png" rel="shortcut icon">
 		<link rel="stylesheet" type="text/css" href="css/olStyle.css" />
-		<link rel="stylesheet" type="text/css" href="../lib/ext-3.4.0/resources/css/ext-all.css" />
+		<link rel="stylesheet" type="text/css" href="lib/ext-3.4.0/resources/css/ext-all.css" />
 		<link rel="stylesheet" type="text/css" href="css/ext-3.4.0.css" />
 		<link rel="stylesheet" type="text/css" href="css/Ext.ux.form.CheckboxCombo.min.css" />
-		<link rel="stylesheet" type="text/css" id="xtheme-wireframe" href="../lib/ext-3.4.0/resources/css/xtheme-wireframe.css"/> 
+		<link rel="stylesheet" type="text/css" id="xtheme-wireframe" href="lib/ext-3.4.0/resources/css/xtheme-wireframe.css"/> 
 		<link rel="stylesheet" type="text/css" href="css/bids.css"/>
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
