Fixing Help typo

--- a/help.html
+++ b/help.html
@@ -83,7 +83,7 @@
 			</div>
 			<div id="main">
 				<article>
-					<h1>BIDS: A Users Manual</h1>
+					<h1>BIDS: A User's Manual</h1>
 					<h2>The Business Information Database System</h2>
 					<br>
 					<div class="helpcontent">
